--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>rms</title>
+  <title>rms map editor</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
