--- a/index.html
+++ b/index.html
@@ -18,43 +18,50 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="RMS DEUS ROBOTS">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Deus App">
+  <meta name="apple-mobile-web-app-title" content="rms">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>Deus App</title>
+  <title>rms</title>
   <link rel="manifest" href="manifest.json">
+  <style>
+    body {
+      background-color: #ffffff;
+    }
 
-  <script>
-    // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "2765575671";
-  </script>
-  <!-- This script adds the flutter initialization JS code -->
-  <script src="flutter.js" defer></script>
-  <script src="js/zxing-library.js" type="application/javascript"></script>
+    #loading {
+        background-color: #ffffff;
+        width: 100%;
+        height: 100%;
+        opacity: 1;
+    }
+
+    #loader {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        width: 120px;
+        height: 120px;
+    }
+  </style>
 </head>
 <body>
-  <script>
-    window.addEventListener('load', function(ev) {
-      // Download main.dart.js
-      _flutter.loader.loadEntrypoint({
-        serviceWorker: {
-          serviceWorkerVersion: serviceWorkerVersion,
-        },
-        onEntrypointLoaded: function(engineInitializer) {
-          engineInitializer.initializeEngine().then(function(appRunner) {
-            appRunner.runApp();
-          });
-        }
-      });
-    });
-  </script>
+<div id="loading">
+  <img id="loader" src="logo_animation.svg" alt="DEUS ROBOTS"/>
+</div>
+<script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
